--- a/DESAFIO-SiteDoAndroid/estilo/style.css
+++ b/DESAFIO-SiteDoAndroid/estilo/style.css
@@ -6,7 +6,7 @@
 /*fonte Baixada*/
 @font-face {
     font-family:'Android';
-    src: url('/DESAFIO-SiteDoAndroid/fontes/idroid.otf');
+    src: url('/DESAFIO-SiteDoAndroid/fontes/idroid.otf') format('opentype');
     font-weight: normal;
 }
 
